--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,48 @@
-/* Make page fit window */
-html, body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
+html {
+	font-size: 10px;
 }
 
+body,td,th,p{
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 1.4rem;
+	color: #333;
+	line-height: 1.5;
+}
+
+body {
+	margin: 0;
+}
+
+img, embed, object, video {
+	max-width: 100%;
+}
+
+ul, li {
+	font-family: Arial, Helvetica, sans-serif;
+	color: #333;
+}
+
+article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+
+header {
+  border-bottom: solid #000 1px;
+}
+main {
+  display: flex;
+  min-height: 100%;
+}
+
+#map-container {
+	position: fixed;
+	height: 100%;
+	right: 0;
+	width: 66%;
+}
 /* Must set map height in order to define the size of the div that contains it -- Google Maps docs */
 #map {
-  height: 100vh;
+  width: 100%;
+  height: 100%;
+
 }
